@@ -126,8 +126,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream()
-            .collect(Collectors.groupingBy(key, LinkedHashMap::new, Collectors.toList()));
+                .stream()
+                .collect(Collectors.groupingBy(key, LinkedHashMap::new, Collectors.toList()));
     }
 
     /**
@@ -147,8 +147,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream()
-            .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.groupingBy(key2, LinkedHashMap::new, Collectors.toList())));
+                .stream()
+                .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.groupingBy(key2, LinkedHashMap::new, Collectors.toList())));
     }
 
     /**
@@ -168,8 +168,8 @@ public class StreamUtils {
             return MapUtil.newHashMap();
         }
         return collection
-            .stream()
-            .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.toMap(key2, Function.identity(), (l, r) -> l)));
+                .stream()
+                .collect(Collectors.groupingBy(key1, LinkedHashMap::new, Collectors.toMap(key2, Function.identity(), (l, r) -> l)));
     }
 
     /**
@@ -187,11 +187,11 @@ public class StreamUtils {
             return CollUtil.newArrayList();
         }
         return collection
-            .stream()
-            .map(function)
-            .filter(Objects::nonNull)
-            // 注意此处不要使用 .toList() 新语法 因为返回的是不可变List 会导致序列化问题
-            .collect(Collectors.toList());
+                .stream()
+                .map(function)
+                .filter(Objects::nonNull)
+                // 注意此处不要使用 .toList() 新语法 因为返回的是不可变List 会导致序列化问题
+                .collect(Collectors.toList());
     }
 
     /**
@@ -209,10 +209,10 @@ public class StreamUtils {
             return CollUtil.newHashSet();
         }
         return collection
-            .stream()
-            .map(function)
-            .filter(Objects::nonNull)
-            .collect(Collectors.toSet());
+                .stream()
+                .map(function)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toSet());
     }
 
 
